# famulus

./: CHANGELOG.md  Cargo.toml  README.md
src/: chat.rs  config.rs  fim.rs  infill.rs  main.rs
src/llama_cpp/: fim.rs  infill.rs  mod.rs
src/mistral/: fim.rs  infill.rs
src/ollama/: infill.rs
src/openai/: chat.rs  completions.rs  mod.rs
