[package]
name = "famulus"
version = "0.0.3"
authors = ["Evgeny Kurnevsky <kurnevsky@gmail.com>"]
license = "AGPL-3.0+"
description = "LSP server integrating LLMs"
keywords = ["lsp", "llm", "ai"]
repository = "https://github.com/kurnevsky/famulus"
edition = "2021"
include = ["**/*.rs", "Cargo.toml", "README.md"]
readme = "README.md"

[dependencies]
lsp-server = "0.7"
lsp-types = { version = "0.97", features = ["proposed"] }
serde_json = "1.0"
anyhow = "1.0"
ropey = "1.6"
serde = { version = "1.0", features = ["rc"] }
reqwest = { version = "0.12", default-features = false, features = [
  "http2",
  "charset",
  "json",
  "rustls-tls",
  "rustls-tls-native-roots",
] }
tokio = { version = "1.42", features = ["rt", "rt-multi-thread", "macros"] }
log = "0.4"
env_logger = "0.11"
dashmap = "6.1"
clap = { version = "4.5", features = ["cargo"] }
either = "1.13"
crossbeam-channel = "0.5"
minijinja = { version = "2.6", features = ["loader"] }
